--- a/web/themes/custom/drupalbook/css/style.css
+++ b/web/themes/custom/drupalbook/css/style.css
@@ -6618,19 +6618,67 @@ a {
     height: 610px;
     float: right; }
   .block-views-blockmain-page-list-all-news-block-block-1 .block-title {
+    background: url("../images/box-title-down-line-upper.gif") repeat-x left 27px;
+    display: inline-block;
+    padding-right: 10px; }
+  .block-views-blockmain-page-list-all-news-block-block-1 .block_title_line {
     width: 46%;
     position: relative;
     top: -430px;
-    left: 53%; }
+    left: 53%;
+    background: url("../images/box-title-down-line.gif") repeat-x left 47px; }
+  .block-views-blockmain-page-list-all-news-block-block-1 .view-footer {
+    position: relative;
+    top: 192px;
+    left: 336px;
+    overflow: auto;
+    height: 610px;
+    float: right; }
+    .block-views-blockmain-page-list-all-news-block-block-1 .view-footer a {
+      color: red; }
   .block-views-blockmain-page-list-all-news-block-block-1 .views-row.clearfix, .block-views-blockmain-page-list-all-news-block-block-1 .views-row.filter-wrapper {
     padding-bottom: 7px; }
 
 .block-views-blockmain-page-news-block-block-1 {
   width: 50%;
-  height: 290px; }
+  height: 260px; }
+  .block-views-blockmain-page-news-block-block-1 .views-row span {
+    color: #a3b0b8;
+    margin: 3px 0 0px 0;
+    font-size: 13px; }
 
 .image_table {
   width: 31%; }
 
 .view-id-main_page_news_block.view-display-id-block_1 .views-row {
   padding-bottom: 10px; }
+
+.block-views-blockmain-page-posts-block-block-1 {
+  width: 50%; }
+  .block-views-blockmain-page-posts-block-block-1 .block-title {
+    background: url("../images/box-title-down-line-upper.gif") repeat-x left 27px;
+    display: inline-block;
+    padding-right: 10px; }
+  .block-views-blockmain-page-posts-block-block-1 .block_title_line {
+    background: url("../images/box-title-down-line.gif") repeat-x left 47px; }
+  .block-views-blockmain-page-posts-block-block-1 .views-field.views-field-field-image-post {
+    width: 40%; }
+
+.block-views-blockmain-page-popular-block-block-1 {
+  width: 45%;
+  position: relative;
+  left: 53%;
+  bottom: 492px; }
+  .block-views-blockmain-page-popular-block-block-1 .block-title {
+    background: url("../images/box-title-down-line-upper.gif") repeat-x left 27px;
+    display: inline-block;
+    padding-right: 10px; }
+  .block-views-blockmain-page-popular-block-block-1 .block_title_line {
+    background: url("../images/box-title-down-line.gif") repeat-x left 47px; }
+  .block-views-blockmain-page-popular-block-block-1 .views-row {
+    padding-bottom: 18px; }
+
+.views-field.views-field-created {
+  color: #a3b0b8;
+  margin: 3px 0 0px 0;
+  font-size: 13px; }
