--- a/web/themes/custom/drupalbook/templates/block.html.twig
+++ b/web/themes/custom/drupalbook/templates/block.html.twig
@@ -57,7 +57,9 @@
 <section{{ attributes.addClass(classes) }}>
   {{ title_prefix }}
   {% if label %}
-    <h2{{ title_attributes.addClass('block-title') }}>{{ label }}</h2>
+    <div class="block_title_line">
+     <h2{{ title_attributes.addClass('block-title') }}>{{ label }}</h2>
+    </div>
   {% endif %}
   {{ title_suffix }}
 
