Custom module Start

--- a/web/themes/custom/drupalbook/css/style.css
+++ b/web/themes/custom/drupalbook/css/style.css
@@ -6957,16 +6957,17 @@ article .comment_title {
 .test-social-share {
   display: flex; }
   .test-social-share .test-social-share-label {
-    font-size: 30px; }
+    font-size: 22px; }
   .test-social-share .test-social-share-links {
-    display: flex; }
+    display: flex;
+    padding-left: 89%; }
     .test-social-share .test-social-share-links .facebook-share {
       display: flex;
-      width: 48px;
-      height: 48px;
+      width: 36px;
+      height: 36px;
       background: url("../images/facebook.png"); }
     .test-social-share .test-social-share-links .twitter-share {
       display: flex;
-      width: 48px;
-      height: 48px;
+      width: 36px;
+      height: 36px;
       background: url("../images/twitter.png"); }
